--- a/dashboard/templates/base.html
+++ b/dashboard/templates/base.html
@@ -2,30 +2,38 @@
 <!DOCTYPE html>
 <html lang="en">
     <link rel="stylesheet" href="{% static "css/base.css" %}"/>
-    <link rel="stylesheet" href="{% static "css/bootstrap/bootstrap.min.css" %}"/>
-    <script href="{% static "javascript/bootstrap/bootstrap.min.js" %}"></script>
+    <link rel="stylesheet" href="{% static "css/bootstrap/bootstrap.css" %}"/>
+    <!-- jquery before bootstrap!!!-->
+    <script type="text/javascript" src="{% static "javascript/jquery-3.4.1.js" %}"></script>
+    <script type="text/javascript" src="{% static "javascript/bootstrap/bootstrap.js" %}"></script>
     {% block scripts %}
 
     {% endblock %}
     <title>{% block title %}Dashboard - Voting Behavior{% endblock %}</title>
 </head>
 
-<body class="pt-5">
+<body>
     {% block navbar %}
     <!-- A grey horizontal navbar that becomes vertical on small screens -->
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
-      <!-- Links -->
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'detail'%}">Detail View</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'admin:index'%}">Admin View</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'admin:index'%}">Link 3</a>
-        </li>
-      </ul>
+    <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top">
+      <a class="navbar-brand" href="{% url 'index' %}">Dashboard</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <!-- Links -->
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'detail'%}">Detail View</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'admin:index'%}">Admin View</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'admin:index'%}">Link 3</a>
+            </li>
+          </ul>
+        </div>
     </nav>
     {% endblock %}
     <div id="content">
