--- a/dashboard/templates/base.html
+++ b/dashboard/templates/base.html
@@ -24,13 +24,13 @@
           <!-- Links -->
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'detail'%}">Detail View</a>
+              <a class="nav-link" href="{% url 'detail' voting_id %}">Detail View</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{% url 'admin:index'%}">Admin View</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'admin:index'%}">Link 3</a>
+              <a class="nav-link" href="{% url 'list'%}">List of votings</a>
             </li>
           </ul>
         </div>
