--- a/dashboard/templates/base.html
+++ b/dashboard/templates/base.html
@@ -1,6 +1,7 @@
 {% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
+<head>
     <link rel="stylesheet" href="{% static "css/base.css" %}"/>
     <link rel="stylesheet" href="{% static "css/bootstrap/bootstrap.css" %}"/>
     <!-- jquery before bootstrap!!!-->
