--- a/dashboard/templates/dashboard/index.html
+++ b/dashboard/templates/dashboard/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block title %} Index {% endblock %}
 {% block content %}
-    <div class="container test">
+    <div class="container">
     </div>
 {% endblock %}
