--- a/dashboard/templates/base.html
+++ b/dashboard/templates/base.html
@@ -25,13 +25,16 @@
           <!-- Links -->
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'detail' voting_id %}">Detail View</a>
+              <a class="nav-link" href="{% url 'detail' voting_id='5' %}">Detail View</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{% url 'admin:index'%}">Admin View</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{% url 'list'%}">List of votings</a>
+            </li>
+              <li class="nav-item">
+              <a class="nav-link" href="{% url 'genre' name='Inneres' %}">Genre View</a>
             </li>
           </ul>
         </div>
