--- a/dashboard/templates/base.html
+++ b/dashboard/templates/base.html
@@ -36,6 +36,9 @@
               <li class="nav-item">
               <a class="nav-link" href="{% url 'genre' name='Inneres' %}">Genre View</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'faction' name='AFD' %}">Faction View</a>
+            </li>
           </ul>
         </div>
     </nav>
