--- a/dashboard/templates/dashboard/faction_votes.html
+++ b/dashboard/templates/dashboard/faction_votes.html
@@ -3,7 +3,7 @@
 {% block title %} Votes for {{ genre }} {% endblock %}
 
 {% block content %}
-    <h2> Genre: {{ name }}</h2>
+    <h2> Faction: {{ name }}</h2>
 <table class="table">
 <thead>
 <tr>
