--- a/dashboard/templates/dashboard/list.html
+++ b/dashboard/templates/dashboard/list.html
@@ -8,6 +8,9 @@
     });
 });</script>
 {% endblock %}
+
+{% block request_path %}{{ request.path }}{% endblock %}
+
 {% block content %}
   <table class="table">
     <thead>
