--- a/dashboard/templates/dashboard/detail.html
+++ b/dashboard/templates/dashboard/detail.html
@@ -66,6 +66,7 @@
     </script>
 
 {% endblock %}
+{% block request_path %}{{ request.path }}{% endblock %}
 {% block content %}
     <div class="container">
     <h2>{{ specific_voting.genre }}</h2>
