--- a/dashboard/templates/dashboard/index.html
+++ b/dashboard/templates/dashboard/index.html
@@ -44,7 +44,9 @@
                     var url = "{% url 'genre' name='123qwe' %}";
                     //alert(url.replace('123qwe', genre_name));
 
-                    location.href = url.replace('123qwe', genre_name);
+                    //location.href = url.replace('123qwe', genre_name);
+                    $('#datetime_picker_form').attr('action', url.replace('123qwe', genre_name));
+                    $('#datetime_picker_submit').click();
                 }
 
             },
@@ -107,7 +109,7 @@
     </thead>
     <tbody>
         {% for key, val in faction_votes.items %}
-            <tr><td><a href="{% url 'faction' name=key %}"><button type="button" class="btn btn-primary">{{ key }}</button></a></td>
+            <tr><td><button type="submit" form="datetime_picker_form" formaction="{% url 'faction' name=key %}" class="btn btn-primary">{{ key }}</button></td>
             {% for vote, count in val.items %}
                 <td>{{ count }}</td>
             {% endfor %}
