add politician view

--- a/dashboard/templates/dashboard/genre_votes.html
+++ b/dashboard/templates/dashboard/genre_votes.html
@@ -5,6 +5,7 @@
 {% block request_path %}{{ request.path }}{% endblock %}
 
 {% block content %}
+    <h2>Votings from {{ start_date }} to {{ end_date }}</h2>
     <h2> Genre: {{ name }}</h2>
 <table class="table">
 <thead>
