--- a/dashboard/templates/base.html
+++ b/dashboard/templates/base.html
@@ -47,6 +47,10 @@
               <a class="nav-link" href="{% url 'admin:index'%}">Admin View</a>
             </li>
 
+              <li class="nav-item">
+              <a class="nav-link" href="{% url 'politician' politician_id='1' %}">Politician View</a>
+            </li>
+
             <li class="nav-item">
                 <button type="button" id="sidebarCollapse" class="btn btn-info">
                 <i class="fas fa-align-left"></i>
