--- a/dashboard/templates/dashboard/list.html
+++ b/dashboard/templates/dashboard/list.html
@@ -12,6 +12,7 @@
 {% block request_path %}{{ request.path }}{% endblock %}
 
 {% block content %}
+    <h2>Votings from {{ start_date }} to {{ end_date }}</h2>
   <table class="table">
     <thead>
       <tr>
