--- a/dashboard/templates/base.html
+++ b/dashboard/templates/base.html
@@ -1,4 +1,6 @@
 {% load staticfiles %}
+{% load i18n %}
+{% language 'de' %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -98,3 +100,4 @@
 
 </body>
 </html>
+{% endlanguage %}
