--- a/dashboard/templates/dashboard/detail.html
+++ b/dashboard/templates/dashboard/detail.html
@@ -104,8 +104,8 @@
             <!-- tuple of politician object - integer-->
             {% for politician in politicians %}
                 <tr class="{{ politician.0.faction|cut:" "|cut:"/" }} faction_row">
-                    <td>{{ politician.0.faction }}</td>
-                    <td>{{ politician.0.pre_name }} {{ politician.0.name }}</td>
+                    <td><button type="submit" form="datetime_picker_form" formaction="{% url 'faction' name=politician.0.faction %}" class="btn btn-primary">{{ politician.0.faction }}</button></td>
+                    <td><button type="submit" form="datetime_picker_form" formaction="{% url 'politician' politician_id=politician.0.id %}" class="btn btn-primary">{{ politician.0.pre_name }} {{ politician.0.name }}</button></td>
                     <!-- vote-->
                     <td>{{ politician.1 }}</td>
                 </tr>
